--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h2>FlowerShop</h2>
 	<ul>
-		<li><a href="home">Home</a></li>
+		<li><a href="index">Home</a></li>
 		<li><a href="productList">Product List</a>
 	</ul>
 </body>
