Added resource bundle.

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -5,9 +5,18 @@
 <title>FlowerShop</title>
 </head>
 <body>
-	<h2>FlowerShop</h2>
-	<ul>
-		<li><a href="ProductList">Product List</a>
-	</ul>
+	<h1>FlowerShop</h1>
+	<h2>Choose language:</h2>
+			<form method="post" action="Language">
+				<p>
+					<input name="language" type="radio" value="en" checked> English
+				</p>
+				<p>
+					<input name="language" type="radio" value="ru"> Русский
+				</p>
+				<p>
+					<input type="submit" value="Next">
+				</p>
+			</form>
 </body>
 </html>
